--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,19 @@
 // Navigation code here
+
+.navbar {
+    width: 100%;
+    text-align: center;
+    padding-top: 20px;
+    background-color: @nav-bg;
+
+    h1 {
+        font-size: 4.5rem;
+        margin-bottom: 20px;
+    }
+
+    a {
+        text-decoration: none;
+        color: black;
+        padding: 2%;
+    }
+}
