--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,5 +1,23 @@
 // Mixins Here
 
+//Test border mixin
 .test(@color: red) {
     border: 2px dashed @color;
+}
+
+//Button mixin
+.custom-button(@width, @height) {
+    width: @width;
+    height: @height;
+    color: white;
+    font-size: 1.7rem;
+    text-align: center;
+    background-color: @button-bg-color;
+    border-radius: 10px;
+    padding-top: 10px;
+    cursor: pointer;
+
+    &:hover {
+        background-color: lighten(@button-bg-color, 50%);
+    }
 }
