--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,3 @@
-@phone (max-width: 800px);
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -187,6 +186,9 @@ footer {
   justify-content: center;
   align-items: center;
 }
+.home .intro img {
+  width: 100%;
+}
 .home .intro h2 {
   padding: 15px;
 }
@@ -204,6 +206,20 @@ footer {
   border-radius: 20px;
   height: 100%;
 }
+@media (max-width: 800px) {
+  .home .space-images {
+    justify-content: center;
+  }
+  .home .space-images .blast {
+    width: 85%;
+  }
+  .home .space-images .launch {
+    display: none;
+  }
+  .home .space-images .sky {
+    display: none;
+  }
+}
 .home .visit-planets {
   padding: 15px;
 }
@@ -220,8 +236,21 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 800px) {
+  .home .walk {
+    margin-top: 20px;
+    flex-direction: column;
+    width: 100%;
+    padding: 5% 5%;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 800px) {
+  .home .walk .walk-text {
+    width: 100%;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -233,7 +262,7 @@ footer {
   width: 35%;
   height: 40px;
   color: white;
-  font-size: 1.7rem;
+  font-size: 2rem;
   text-align: center;
   background-color: black;
   border-radius: 10px;
@@ -243,12 +272,33 @@ footer {
 .home .walk .walk-text .btn:hover {
   background-color: #808080;
 }
+@media (max-width: 800px) {
+  .home .walk .walk-text .btn {
+    width: 100%;
+    height: 70px;
+    padding-top: 25px;
+  }
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 800px) {
+  .home .walk .walk-img {
+    order: -1;
+    width: 100%;
+    margin-left: 0;
+    margin-bottom: 20px;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
   height: auto;
   border-radius: 10px;
+}
+@media (max-width: 800px) {
+  .home .walk .walk-img img {
+    order: -1;
+    width: 100%;
+  }
 }
