--- a/css/index.css
+++ b/css/index.css
@@ -270,7 +270,9 @@ footer {
   cursor: pointer;
 }
 .home .walk .walk-text .btn:hover {
-  background-color: #808080;
+  background-color: white;
+  color: black;
+  border: 1px solid black;
 }
 @media (max-width: 800px) {
   .home .walk .walk-text .btn {
