--- a/less/mixins.less
+++ b/less/mixins.less
@@ -18,7 +18,9 @@
     cursor: pointer;
 
     &:hover {
-        background-color: lighten(@button-bg-color, 50%);
+        background-color: white;
+        color: @button-bg-color;
+        border: 1px solid black;
     }
 }
 
